added mp3 player to all pages and mp3 file modified style

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,9 @@
                 <a href="shop.html">Shop</a>
                 <a class="active" href="contact.html">Contact</a>
                 <a href="about.html">About</a>
+                <audio controls class="mp3">
+                    <source src="/mp3/sMs-NYeVe130.mp3" type="audio/mpeg">
+                </audio>
             </div>
         
         </div>
