added button to shop and adjusted img size modified style.css

--- a/shop.html
+++ b/shop.html
@@ -41,13 +41,13 @@
   <!-- clothing divs -->
   <div class="clothing-div"> 
     <div class="left-product product-shadow">
-        <a href=""><img src="/gie_images/getitapparel-thirdeye.png" alt="Get iT Third Eye T-shirt"></a> 
+        <img class="shop-img" src="/gie_images/getitapparel-thirdeye.png" alt="Get iT Third Eye T-shirt"><button class="buy-button"type="button">$35.00</button>
     </div>
     <div class="center-product product-shadow">
-      <img src="/gie_images/getitapparel-invest.png" alt="Get iT Invest T-shirt">
+      <img class="shop-img" src="/gie_images/getitapparel-invest.png" alt="Get iT Invest T-shirt"><button class="buy-button"type="button">$35.00</button>
     </div>
     <div class="right-product product-shadow">
-      <img src="/gie_images/getitapparel-abstract.png" alt="Get iT Abstract T-shirt">
+      <img class="shop-img" src="/gie_images/getitapparel-abstract.png" alt="Get iT Abstract T-shirt"><button class="buy-button"type="button">$35.00</button>
     </div>
   </div>
 
