--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css"> 
 <!-- google font famliy  -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="gie_images/getit_favicon.ico" />
+        <link rel="icon" type="image/png" href="./gie_images/getit_favicon.ico" />
 
 <!-- title -->
         <title>About Get iT Apparel</title>
@@ -18,7 +18,7 @@
     <div> 
       <div class="logo"> 
             
-         <a href="index.html"><img id="logo" src="gie_images/getit-logo.png" href="index.html"></a> 
+         <a href="index.html"><img id="logo" src="./gie_images/getit-logo.png" alt="getit logo" href="index.html"></a> 
        
          <!-- navbar start -->
           <div class="topnav">
