added sticky navbar to all pages

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
            <a href="index.html"><img id="logo" src="./gie_images/getit-logo.png" alt="getit logo" href="index.html"></a> 
          
            <!-- navbar start -->
-            <div class="topnav">
+            <div class="topnav sticky">
                 <a href="index.html">Home</a>
                 <a href="shop.html">Shop</a>
                 <a class="active" href="contact.html">Contact</a>
