--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
        <a href="index.html"><img id="logo" src="./gie_images/getit-logo.png" alt="getit logo" href="index.html"></a> 
      
        <!-- navbar start -->
-        <div class="topnav">
+        <div class="topnav sticky">
             <a href="index.html">Home</a>
             <a class="active" href="shop.html">Shop</a>
             <a href="contact.html">Contact</a>
